--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
     android:fadeOffset="500000000"
     android:gestureColor="#000000"
     android:gestureStrokeType="multiple"
-    android:gestureStrokeWidth="1"
+    android:gestureStrokeWidth="5"
     android:uncertainGestureColor="#000000"
     android:layout_above="@+id/save_button"
     android:background="#ffffffff" />
@@ -24,21 +24,21 @@
         android:id="@id/save_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20sp"
         android:paddingLeft="20sp"
         android:paddingRight="20sp"
         android:text="Save"
-        android:textSize="22sp" />
+        android:textSize="22sp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <Button
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
+        android:text="Clear"
         android:id="@+id/button"
-        android:layout_alignBottom="@+id/gestures"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
